--- a/style.css
+++ b/style.css
@@ -1,12 +1,83 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Heebo:wght@300&display=swap');
+
+:root {
+  --primary-color: #000;
+  --secondary-color: #fff;
+}
 
 * {
   box-sizing: border-box;
+}
+
+html {
+  transition: all 0.66s ease-in-out;
+}
+
+html.dark {
+  --primary-color: #fff;
+  --secondary-color: #333;
+  background: #111;
+  color: var(--primary-color);
 }
 
 body {
   height: 100vh;
   margin: 0;
   overflow: hidden;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Heebo', sans-serif;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.toggle {
+  background: var(--primary-color);
+  color: var(--secondary-color);
+  border: 0;
+  border-radius: 1.5px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 100px;
+}
+
+.toggle:focus {
+  outline: 0;
+}
+
+.clock-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.clock {
+  position: relative;
+  width: 200px;
+  height: 200px;
+}
+
+.needle {
+  background: var(--primary-color);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  height: 65px;
+  width: 3px;
+  transform-origin: bottom center;
+}
+
+.needle.hour {
+  transform: translate(-50%, -100%) rotate(0deg);
+}
+
+.needle.minute {
+  transform: translate(-50%, -100%) rotate(0deg);
+  height: 100px;
+}
+
+.needle.second {
+  transform: translate(-50%, -100%) rotate(0deg);
+  height: 100px;
+  background: #e72c3c;
 }
