css and dark mode functionality added

--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 :root {
   --primary-color: #000;
   --secondary-color: #fff;
+  --clock-part-color: #e72c3c;
 }
 
 * {
@@ -79,5 +80,53 @@ body {
 .needle.second {
   transform: translate(-50%, -100%) rotate(0deg);
   height: 100px;
-  background: #e72c3c;
+  background: var(--clock-part-color);
+}
+
+.center-point {
+  background: var(--clock-part-color);
+  width: 9px;
+  height: 9px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 50%;
+}
+
+.center-point::after {
+  content: '';
+  background: var(--primary-color);
+  width: 3px;
+  height: 3px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 50%;
+}
+
+.time {
+  font-size: 60px;
+}
+
+.date {
+  color: #aaa;
+  font-size: 14px;
+  letter-spacing: 0.3px;
+  text-transform: uppercase;
+}
+
+.date .circle {
+  background: var(--primary-color);
+  color: var(--secondary-color);
+  border-radius: 50%;
+  height: 18px;
+  width: 18px;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  line-height: 18px;
+  transition: all 0.66s ease-in-out;
+  font-size: 12px;
 }
